maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:7: error: not found: value againstWall
      case 0 if(!againstWall()) => forward();
                 ^